<resources>
    <string name="app_name" translatable="false">AlfaBet_0.1</string>
    <string name="help_back_text">Back</string>
    <string name="help_text">Help</string>
    <string name="help_text_park">After clicking, a label will appear with which you can make parking. Also, you can leave notes or photos.</string>
    <string name="help_text_car">After parking the car, you can look at the note that you left.</string>
    <string name="help_text_gps">Click to determine your position.</string>
    <string name="help_text_compass">Click to plot a route from you to the car.</string>
    <string name="help_get_permission_next">Next</string>
    <string name="settings_button_history">History</string>
    <string name="permission_camera_warning">The camera is not available. There is no way to use the camera to create a photo.\n</string>
    <string name="permission_location_warning">Current geolocation is not available.</string>
    <string name="settings_theme_switch_light">Theme: Light</string>
    <string name="settings_theme_switch_dark">Theme: Dark</string>
    <string name="help_text_permission_description">To use all the functionality of the application, allow access to geolocation and camera.</string>
    <string name="first_launch">First launch</string>
    <string name="description">Description</string>
    <string name="help_get_permission_start">Start</string>
    <string name="apply_changes">Apply changes</string>
    <string name="functional_is_limited_text">The functionality is limited.</string>
    <string name="parking_information">Parking Information</string>
    <string name="toast_camera_perm">Allow using the camera in the settings</string>
    <string name="Geolocation_is_disabled">Geolocation is disabled</string>
    <string name="Enable_geolocation_text">Enable geolocation in your phone settings so that the app will show your location</string>
    <string name="empty">Empty</string>
</resources>